ignore all videos, move files to directories

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,9 @@
 .idea
 
 # Credential Information
-api_credentials.py
-api_credentials.pyc
+python_code/api_credentials.py
+python_code/api_credentials.pyc
 
 # Generated Test Files
 *.[jJ][pP][gG]
-test.jpg
-test.h264
+.[hH]264
